--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -579,7 +579,11 @@
             subtotalElement.innerText = `$${subtotal.toFixed(2)}`;
             totalElement.innerText = `$${subtotal.toFixed(2)}`;
         }
+
+        updateCartSubtotal()
+
     </script>
+
     
       
       
