--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -208,76 +208,75 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="tab-content dashboard-content">
-                                    <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <h5 class="mb-0">Your Orders</h5>
-                                            </div>
-                                            <div class="card-body">
-                                                <div class="table-responsive">
-                                                    <table class="table">
-                                                        <thead>
+                                  <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h5 class="mb-0">Your Orders</h5>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="table-responsive">
+                                                <table class="table">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Order</th>
+                                                            <th>Date</th>
+                                                            <th>Status</th>
+                                                            <th>Total</th>
+                                                            <th>Actions</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <% if (order && order.length > 0) { %>
+                                                            <% order.forEach((orderItem, index) => { %>
+                                                                <tr>
+                                                                    <td>
+                                                                        <% let imageCount = 0; %>
+                                                                        <% let allItemsCancelled = true; %>
+                                                                        <% orderItem.items.forEach((product, prodIndex)=> { %>
+                                                                            <% if (product.status !== 'Cancelled') { %>
+                                                                                <% allItemsCancelled = false; %>
+                                                                            <% } %>
+                                                                            <% if(imageCount % 2 === 0 && imageCount !== 0) { %>
+                                                                                <br>
+                                                                            <% } %>
+                                                                            <img src="/Productimages/<%= product.media[0] %>" alt="<%= product.name %>" class="img-sm img-thumbnail" style="max-width: 100px;">
+                                                                            <% imageCount++; %>
+                                                                        <% }) %>
+                                                                    </td>
+                                                                    <td><%= orderItem.orderDate.toDateString() %></td>
+                                                                      
+                                                                   
+                                                                    <td>
+                                                                        <% if (allItemsCancelled) { %>
+                                                                            Cancelled
+                                                                        <% } else { %>
+                                                                            <%= orderItem.orderStatus %>
+                                                                        <% } %>
+                                                                        
+                                                                    </td>
+                                                                    <td>
+                                                                        <%= orderItem.billTotal %> for <%= orderItem.items.length %> item(s)
+                                                                    </td>
+                                                                    <td>
+                                                                        <a href="/orderView?id=<%= orderItem._id %>" class="btn-small d-block">View</a>
+                                                                    </td>
+                                                                </tr>
+                                                            <% }); %>
+                                                        <% } else { %>
                                                             <tr>
-                                                                <th>Order</th>
-                                                                <th>Date</th>
-                                                                <th>Status</th>
-                                                                <th>Total</th>
-                                                                <th>Actions</th>
+                                                                <td colspan="5">No orders found</td>
                                                             </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            <tr>
-                                                                <td>#1357</td>
-                                                                <td>March 45, 2020</td>
-                                                                <td>Processing</td>
-                                                                <td>$125.00 for 2 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>#2468</td>
-                                                                <td>June 29, 2020</td>
-                                                                <td>Completed</td>
-                                                                <td>$364.00 for 5 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>#2366</td>
-                                                                <td>August 02, 2020</td>
-                                                                <td>Completed</td>
-                                                                <td>$280.00 for 3 item</td>
-                                                                <td><a href="#" class="btn-small d-block">View</a></td>
-                                                            </tr>
-                                                        </tbody>
-                                                    </table>
-                                                </div>
+                                                        <% } %>
+                                                    </tbody>
+                                                    
+                                                    
+                                                    
+                                                </table>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="tab-pane fade" id="track-orders" role="tabpanel" aria-labelledby="track-orders-tab">
-                                        <div class="card">
-                                            <div class="card-header">
-                                                <h5 class="mb-0">Orders tracking</h5>
-                                            </div>
-                                            <div class="card-body contact-from-area">
-                                                <p>To track your order please enter your OrderID in the box below and press "Track" button. This was given to you on your receipt and in the confirmation email you should have received.</p>
-                                                <div class="row">
-                                                    <div class="col-lg-8">
-                                                        <form class="contact-form-style mt-30 mb-50" action="#" method="post">
-                                                            <div class="input-style mb-20">
-                                                                <label>Order ID</label>
-                                                                <input name="order-id" placeholder="Found in your order confirmation email" type="text" class="square">
-                                                            </div>
-                                                            <div class="input-style mb-20">
-                                                                <label>Billing email</label>
-                                                                <input name="billing-email" placeholder="Email you used during checkout" type="email" class="square">
-                                                            </div>
-                                                            <button class="submit submit-auto-width" type="submit">Track</button>
-                                                        </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                </div>
+                                
                                     <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
                                         <!-- Add Address button -->
                                         <div class="text-end mb-3">
