--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -258,7 +258,7 @@
                                                                         <%= orderItem.billTotal %> for <%= orderItem.items.length %> item(s)
                                                                     </td>
                                                                     <td>
-                                                                        <a href="/orderView?id=<%= orderItem._id %>" class="btn-small d-block">View</a>
+                                                                        <a href="/orderview?id=<%= orderItem._id %>" class="btn-small d-block">View</a>
                                                                     </td>
                                                                 </tr>
                                                             <% }); %>
