--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -51,7 +51,7 @@
                     </a>
                 </li>
                 <li class="">
-                    <a class="menu-link" href=""><i class="icon material-icons md-shopping_bag"></i>
+                    <a class="menu-link" href="admin/order"><i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Orders</span>
                     </a>
             </ul>
