--- a/views/admin/order.ejs
+++ b/views/admin/order.ejs
@@ -216,7 +216,7 @@
                                             </a>
                                             <div class="dropdown-menu">
                                                 <a class="dropdown-item" id="changeStatus<%= order._id %>" href="#" onclick="showChangeStatus('<%= order._id %>')">Change Status</a>
-                                                <a class="dropdown-item text-danger" href="#">Delete</a>
+                                                <!-- <a class="dropdown-item text-danger" href="#">Delete</a> -->
                                             </div>
                                         </div>
                                     </td>
