--- a/views/partials/headercopy.ejs
+++ b/views/partials/headercopy.ejs
@@ -5,8 +5,8 @@
                 <div class="col-xl-3 col-lg-4">
                     <div class="header-info">
                         <ul>
-                            <li><i class="fi-rs-smartphone"></i> <a href="#">9645801852</a></li>
-                            <li><i class="fi-rs-marker"></i><a  href="page-contact.html">Our location</a></li>
+                            <!-- <li><i class="fi-rs-smartphone"></i> <a href="#"></a></li>
+                            <li><i class="fi-rs-marker"></i><a  href="page-contact.html"></a></li> -->
                         </ul>
                     </div>
                 </div>
@@ -25,12 +25,12 @@
                     <div class="header-info header-info-right">
                         <ul>
                             <li>
-                                <a class="language-dropdown-active" href="#"> <i class="fi-rs-world"></i> English <i class="fi-rs-angle-small-down"></i></a>
+                                <!-- <a class="language-dropdown-active" href="#"> <i class="fi-rs-world"></i> English <i class="fi-rs-angle-small-down"></i></a>
                                 <ul class="language-dropdown">
                                     <li><a href="#"><img src="Userassets/imgs/theme/flag-fr.png" alt="">Français</a></li>
                                     <li><a href="#"><img src="Userassets/imgs/theme/flag-dt.png" alt="">Deutsch</a></li>
                                     <li><a href="#"><img src="Userassets/imgs/theme/flag-ru.png" alt="">Pусский</a></li>
-                                </ul>
+                                </ul> -->
                             </li>
                             <%if(user){%>
                                  <p><a href="/profile">hello <%= user.name %></a></p>
@@ -60,51 +60,51 @@
                             <div class="header-action-icon-2">
                                 <a href="shop-wishlist.html">
                                     <img class="svgInject" alt="Evara" src="Userassets/imgs/theme/icons/icon-heart.svg">
-                                    <span class="pro-count blue">4</span>
+                                    <!-- <span class="pro-count blue">4</span> -->
                                 </a>
                             </div>
                             <div class="header-action-icon-2">
                                 <a class="mini-cart-icon" href="/cart">
                                     <img alt="Evara" src="Userassets/imgs/theme/icons/icon-cart.svg">
-                                    <span class="pro-count blue">2</span>
+                                    <!-- <span class="pro-count blue">2</span> -->
                                 </a>
-                                <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                                <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                     <ul>
                                         <li>
                                             <div class="shopping-cart-img">
-                                                <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-3.jpg"></a>
+                                                 <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-3.jpg"></a> -->
                                             </div>
                                             <div class="shopping-cart-title">
-                                                <h4><a href="shop-product-right.html">Daisy Casual Bag</a></h4>
-                                                <h4><span>1 × </span>$800.00</h4>
+                                                <!-- <h4><a href="shop-product-right.html">Daisy Casual Bag</a></h4>
+                                                <h4><span>1 × </span>$800.00</h4> -->
                                             </div>
                                             <div class="shopping-cart-delete">
-                                                <a href="#"><i class="fi-rs-cross-small"></i></a>
+                                                <!-- <a href="#"><i class="fi-rs-cross-small"></i></a> -->
                                             </div>
                                         </li>
                                         <li>
                                             <div class="shopping-cart-img">
-                                                <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-2.jpg"></a>
+                                                <!-- <a href="shop-product-right.html"><img alt="Evara" src="Userassets/imgs/shop/thumbnail-2.jpg"></a> -->
                                             </div>
                                             <div class="shopping-cart-title">
-                                                <h4><a href="shop-product-right.html">Corduroy Shirts</a></h4>
-                                                <h4><span>1 × </span>$3200.00</h4>
+                                                <!-- <h4><a href="shop-product-right.html">Corduroy Shirts</a></h4>
+                                                <h4><span>1 × </span>$3200.00</h4> -->
                                             </div>
                                             <div class="shopping-cart-delete">
-                                                <a href="#"><i class="fi-rs-cross-small"></i></a>
+                                                <!-- <a href="#"><i class="fi-rs-cross-small"></i></a> -->
                                             </div>
                                         </li>
                                     </ul>
                                     <div class="shopping-cart-footer">
                                         <div class="shopping-cart-total">
-                                            <h4>Total <span>$4000.00</span></h4>
+                                            <!-- <h4>Total <span>$4000.00</span></h4> -->
                                         </div>
                                         <div class="shopping-cart-button">
-                                            <a href="shop-cart.html" class="outline">View cart</a>
-                                            <a href="shop-checkout.html">Checkout</a>
+                                            <!-- <a href="shop-cart.html" class="outline">View cart</a>
+                                            <a href="shop-checkout.html">Checkout</a> -->
                                         </div>
                                     </div>
-                                </div>
+                                </div> 
                             </div>
                         </div>
                     </div>
@@ -124,16 +124,16 @@
                             <ul>
                                 <li><a class="active" href="/">Home <i class="fi-rs-angle-down"></i></a>
                                     
-                                </li>
+                                <!-- </li>
                                 <li>
-                                    <a href="page-about.html">About</a>
+                                    <a href="page-about.html"></a> -->
                                 </li>
                                 <li><a href="/shop">Shop <i class="fi-rs-angle-down"></i></a>
-                                
+<!--                                 
                                 </li>
                                
                                 <li>
-                                    <a href="page-contact.html">Contact</a>
+                                    <a href="page-contact.html"></a> -->
                                 </li>
                             </ul>
                         </nav>
