--- a/views/users/shopdetail.ejs
+++ b/views/users/shopdetail.ejs
@@ -78,19 +78,24 @@
                     <div class="short-desc mb-30">
                       <p><%= product.description %></p>
                     </div>
+                    <div class="bt-1 border-color-1 mt-30 mb-30"></div>
+                    <div class="product-stock">
+                      <span class="stock-label">Available Stock: </span>
+                      <span class="stock-value"><%= product.stock %></span>
+                    </div>
                    
                   
                     <div class="bt-1 border-color-1 mt-30 mb-30"></div>
                     <div class="detail-extralink">
-                      <div class="detail-qty border radius">
-                        <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
+                      <div class="">
+                        <!-- <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
                         <span class="qty-val">1</span>
-                        <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
+                        <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a> -->
                       </div>
                       <div class="product-extra-link2">
                         <button type="submit" class="button button-add-to-cart"  data-id="<%= product.id %>" onclick="addToCart('<%= product.id %>')">Add to cart</button>
-                        <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                        <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                        <!-- <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                        <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
                       </div>
                     </div>
                     <div class="product-share mt-40">
