--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -63,6 +63,15 @@
                 <div id="passwordError" class="error-message"></div>
             </div>
             <!-- Other form elements -->
+            <div class="login_footer form-group">
+              <div class="chek-form">
+                  <div class="custome-checkbox">
+                      <input class="form-check-input" type="checkbox" name="checkbox" id="exampleCheckbox1" value="">
+                      <!-- <label class="form-check-label" for="exampleCheckbox1"><span>Remember me</span></label> -->
+                  </div>
+              </div>
+              <a class="text-muted" href="/forgot">Forgot password?</a>
+          </div>
             <div class="form-group">
                 <button
                     type="submit"
