--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -78,7 +78,7 @@
         <tbody>
             <% order.items.forEach(item => { %>
                 <tr>
-                    <td class="center"><%= order.orderId %></td>
+                    <td class="center"><%= order.oId %></td>
                     <td class="center"><%= order.orderDate.toDateString() %></td>
                     <td class="center"><%= order.paymentMethod %></td>
                     <td class="center"><%= order.paymentStatus %></td>
