--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -64,7 +64,7 @@
                                             </tr>
                                         <% } else { %>
                                             <tr>
-                                                <td colspan="6" class="text-center">Product information is not available.</td>
+                                                <!-- <td colspan="6" class="text-center">Product information is not available.</td> -->
                                             </tr>
                                         <% } %>
                                     <% }) %>
