--- a/views/users/wishlist.ejs
+++ b/views/users/wishlist.ejs
@@ -53,7 +53,7 @@
                                         <button class="btn btn-sm"  data-id="<%= product.id %>" onclick="addToCart('<%= product.id %>')">
                                             <i class="fi-rs-shopping-bag-add">Add to cart</i>
                                         <% } else { %>
-                                            <button class="btn btn-sm btn-secondary"><i class="fi-rs-headset mr-5"></i>Contact Us</button>
+                                            <!-- <button class="btn btn-sm btn-secondary"><i class="fi-rs-headset mr-5"></i>Contact Us</button> -->
                                             <% } %>
 
                                     </td>
